# lexid

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  config.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
data/raw/: MANIFEST.json
data/samples/: README.md
docs/: agent.md  data-privacy.md  deployment.md  evals.md  finetuning.md
evals/: RESULTS.md  calibrate_judge.py  gate_check.py  make_review_sheet.py  run_generation.py  run_retrieval.py
evals/datasets/: retrieval_v0_draft.json  retrieval_v0_draft.review.md  retrieval_v1.json  retrieval_v1.review.md
evals/judge_prompts/: generation_judge.md
finetuning/dataset/: anonymize.py
ingestion/: chunk.py  embed.py  index.py  parse.py  run.py
prompts/: loader.py  rag_generation.md
rag/: __main__.py  generate.py  hybrid.py  llm_client.py  pipeline.py  rerank.py  retrieve.py
scripts/: gen_architecture.py  healthcheck.py
tests/: test_anonymize.py  test_calibrate_judge.py  test_chunk.py  test_embed.py  test_gate_check.py  test_gen_architecture.py  test_hybrid.py  test_index.py  test_make_review_sheet.py  test_parse.py  test_rag.py  test_rerank.py  test_run_generation.py  test_run_retrieval.py  test_skeleton.py
